<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/phoneauth"/>
        
      <TextView
          android:id="@+id/txtname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txtname"
          android:layout_marginTop="30dp"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
          android:layout_marginLeft="70dp"/>

        <EditText
            android:id="@+id/edittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintno"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/txtxolor"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

</LinearLayout>