<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyPhone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/phoneauth"/>

        <TextView
            android:id="@+id/txtwait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wait"
            android:layout_marginTop="30dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginLeft="70dp"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_below="@id/txtwait"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintwait"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnsign"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/txtxolor"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </LinearLayout>


</LinearLayout>